Рефакторинг расстановки объектов

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,13 +27,17 @@ data:
         container2:
           color: "#eeeeae"
           type: container
-          layout: inline
+          layout: column
           name: container2
           objects:
             ingress1:
               color: "#eeeeee"
               type: box
               name: ingress1
+            ingress11:
+              color: "#eeeeee"
+              type: box
+              name: ingress11
         container3:
           color: "#eeeeae"
           type: container
