Заглушка для обработки связей

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@ data:
   layout: inline
   objects:
     container2:
-      color: "#949494"
+      color: "#cfcfcf"
       type: container
       layout: column
       name: container2
@@ -38,23 +38,23 @@ data:
           name: depl1
 
     container3:
-      color: "#949494"
+      color: "#cfcfcf"
       type: container
       layout: inline
       name: container3
       objects:
-        ingress1:
+        ingress2:
           color: "#eeeeee"
           type: box
-          name: ingress1
-        service1:
+          name: ingress2
+        service2:
           color: "#eeeeee"
           type: box
-          name: service1
-        deployment1:
+          name: service2
+        deployment2:
           color: "#eeeeee"
           type: box
-          name: depl1
+          name: depl2
 
 
 relations:
