Метод сжатия точек линии

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,9 +58,9 @@ data:
 
 
 relations:
-#  service1-ingress2:
-#    from: service1
-#    to: ingress2
+  service1-ingress2:
+    from: service1
+    to: ingress2
   deployment1-service2:
     from: deployment1
     to: service2
