Рисование линий между объектами по дефолту

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,9 +61,10 @@ relations:
   service1-ingress2:
     from: service1
     to: ingress2
-  deployment1-service2:
-    from: deployment1
-    to: service2
+    entry: top
+#  deployment1-service2:
+#    from: deployment1
+#    to: service2
 
 
 </textarea>
