--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>YAML Chart</title>
-    <script src="dist/main.js" type="module"></script>
+    <script src="main.js" type="module"></script>
 </head>
 <body>
 
@@ -13,9 +13,6 @@
     <div class="row">
         <div id="left-panel" class="col-1">
             <textarea id="yaml-text">
-
-
-
             </textarea>
         </div>
     </div>
