При нажатии на объекты в textarea формируется yaml со связью между объектами

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,9 +11,16 @@
 
 <div class="group">
     <div class="row">
-        <div id="left-panel" class="col-1">
-            <textarea id="yaml-text">
-            </textarea>
+        <div id="left-panel" class="col-2">
+            YAML Data:
+            <br />
+            <textarea id="yaml-text" style="font-size: 12px;" rows="3"></textarea>
+        </div>
+        <div class="col-1"></div>
+        <div class="col-3">
+            Manual relation:
+            <br />
+            <textarea id="manual-relation-text" style="font-size: 12px;" rows="3" cols="80"></textarea>
         </div>
     </div>
     <div class="row">
